--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
+  "homepage": "https://Kvaizer.github.io/admin-panel",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -56,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
